converted sass to css.

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,8 +1,8 @@
 body
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  background-color:#b66d0dff
 
 a
   color: #00B7FF
-
 
