--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,11 +1,11 @@
 body
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-  background-color:#b66d0dff
+  background-color:#5C4742
 
 a
   color: #00B7FF
 
 button
-  border-radius:3px;
+  border-radius:3px
   
