--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
 extends layout
 block content
+  h1(style="font-family: 'Teko', sans-serif; text-align: center;")|Random Swanson Quotes
   div(class="row")
       div(class="col" style='text-align: center; ')
         button(style='border-radius:3px; margin-top:30px;' onclick='getQuote()') Swanson Quote
