--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
     link(rel='preconnect' href='https://fonts.googleapis.com')
     link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
     link(href='https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap' rel='stylesheet')
-    link(href="/public/stylesheets/style.css")
+    link(href="/stylesheets/style.css" rel='stylesheet')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
     h1(style="font-family: 'Teko', sans-serif; text-align: center;")|Random Swanson Quotes
     block content
