--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  color:red;
+  background-color: #5C4742;
 }
 
-h1 {
+a {
   color: #00B7FF;
 }
 
