--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #00B7FF !important;
+  background-color: #5c4742ff !important;
 }
 
 a {
@@ -10,6 +10,11 @@ a {
 
 button {
   border-radius: 3px;
+  background-color: #8d5b4cff;
+  font-size: 25px !important;
+  color: #FFFFFF;
+  width: 200px;
+  height: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
