--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,11 +1,17 @@
 body
   padding: 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-  background-color:#00B7FF
+  background-color:  #5c4742ff !important
+
 
 a
   color: #00B7FF
 
 button
-  border-radius:3px
+  border-radius: 3px
+  background-color: #8d5b4cff
+  font-size:90px
+  color:#FFFFFF
+  width:200px
+  height:50px
   
