--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -10,8 +10,14 @@ a
 button
   border-radius: 3px
   background-color: #8d5b4cff
-  font-size:90px
+  font-family: "Lucida Grande", Helvetica, Arial
+  font-size:15px !important
   color:#FFFFFF
-  width:200px
+  width:150px
   height:50px
   
+#quoteBlock
+  font-size:30px
+  font-family: 'Teko', sans-serif
+  text-align: center
+  padding-top:20px
