--- a/views/index.pug
+++ b/views/index.pug
@@ -3,9 +3,9 @@ block content
   h1(style="font-family: 'Teko', sans-serif; text-align: center;")|Random Swanson Quotes
   div(class="row")
       div(class="col" style='text-align: center; ')
-        button(style='border-radius:3px; margin-top:30px;' onclick='getQuote()') Swanson Quote
+        button(style='border-radius:3px; margin-top:30px;' onclick='getQuote()') Sage Wisdom
   div(class="row")
       div(class="col-sm-12" style='text-align: center;' id="quote")
-        p#quoteBlock(style="font-size:30px;font-family: 'Teko', sans-serif; text-align: center; padding-top:20px;")
+        p#quoteBlock
   script(src="/javascripts/quotes.js")
       
